--- a/static/about.html
+++ b/static/about.html
@@ -20,7 +20,7 @@
         <div class="about-sir-details">
             <p><strong>Full Name:</strong> Chandan Kundu</p>
             <p><strong>Qualifications:</strong> M.A. (Master of Arts), B.Ed. (Bachelor of Education)</p>
-            <p><strong>Experience:</strong> With 17+ years of teaching experience, Sir has successfully guided numerous students in both Bengali and English versions.</p>
+            <p><strong>Experience:</strong> With 18+ years of teaching experience, Sir has successfully guided numerous students in both Bengali and English versions.</p>
             <p><strong>Subjects Taught:</strong> Bengali, History, Geography, Sanskrit, English, Computer</p>
             <p><strong>Teaching Style:</strong> Chandan Sir uses a student-centered approach with a focus on interactive learning, helping students develop a deep understanding of the subjects.</p>
         </div>
@@ -35,7 +35,7 @@
     <section class="address-section">
         <h2>Teacher's Address</h2>
         <p><strong>Recognising Name:</strong> Chandan Sir</p>
-        <p><strong>Location:</strong> Tikorhat, Bene Pukur, Burdwan</p>
+        <p><strong>Location:</strong> Tikorhat, BenePukur Par, Burdwan</p>
         <p><strong>Mobile:</strong> <a href="tel:+919126879504">9126879504</a></p>
     </section>
 
