--- a/static/classes.html
+++ b/static/classes.html
@@ -3,39 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subjects</title>
-    <link rel="stylesheet" href="subjects_style.css">
+    <title>Classes</title>
+    <link rel="stylesheet" href="classes_style.css">
 </head>
 <body>
     <!-- Header -->
     <header class="header">
-        <h1>Subjects Taught by Chandan Sir</h1>
+        <h1>Classes Taught by Chandan Sir</h1>
     </header>
 
     <!-- Subjects Section -->
     <section class="subjects-section">
-        <h2>Available Subjects</h2>
-        <p>All subjects are taught for both Bengali and English version students.</p>
+        <h2>Available Classes</h2>
+        <p>All Classes are taught for both Bengali and English version students.</p>
         
         <div class="subject-list">
             <div class="subject-item">
-                <h3>Bengali</h3>
+                <h3>Class 6</h3>
             </div>
             <div class="subject-item">
-                <h3>History</h3>
+                <h3>Class 7</h3>
             </div>
             <div class="subject-item">
-                <h3>Geography</h3>
+                <h3>Class 8</h3>
             </div>
             <div class="subject-item">
-                <h3>Sanskrit</h3>
+                <h3>Class 9</h3>
             </div>
             <div class="subject-item">
-                <h3>English</h3>
-                <p><strong>Note:</strong> From 6th to 10th class</p>
+                <h3>Class 10</h3>
             </div>
             <div class="subject-item">
-                <h3>Computer</h3>
+                <h3>Class 11</h3>
+            </div>
+            <div class="subject-item">
+                <h3>Class 12</h3>
+            </div>
+            <div class="subject-item">
+                <h3>B.A (Pass)</h3>
+                <p><strong>Note:</strong> Sanskrit only</p>
+            </div>
+            <div class="subject-item">
+                <h3>B.A (Honours)</h3>
+                <p><strong>Note:</strong> Sanskrit only</p>
             </div>
         </div>
     </section>
