--- a/index.html
+++ b/index.html
@@ -3,41 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arts Academy</title>
+    <title>ARTS ACADEMY</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" href="favicon.ico" type="image/ico">
 </head>
 <body>
     <!-- Header Section -->
     <header class="header">
-        <img src="favicon.ico" alt="Arts Academy Logo" class="logo">
-        <h1>Welcome to <span>Arts Academy</span></h1>
+        <img src="favicon.ico" alt="ARTS ACADEMY Logo" class="logo">
+        <h1>Welcome To <span><br>ARTS ACADEMY</span></h1>
         <p>Your gateway to creative learning.</p>
     </header>
 
-    <!-- Why Arts Academy Section -->
+    <!-- Why ARTS ACADEMY Section -->
 <section class="why-arts-academy">
-    <h2>Why Choose Arts Academy?</h2>
-    <p>Arts Academy is a local initiative dedicated to helping students excel in their studies and build essential computer skills. We specialize in teaching students from Class 6 to 12 and college arts students. Here’s why you should join us:</p>
+    <h2>Why Choose ARTS ACADEMY ?</h2>
+    <p>ARTS ACADEMY is a local initiative dedicated to helping students excel in their studies and build essential computer skills. We specialize in teaching students from Class 6 to 12 and college arts students. Here’s why you should join us:</p>
     <ul>
         <li><strong>Focused Learning:</strong> Small batch sizes ensure personalized attention and better understanding for every student.</li>
-        <li><strong>Experienced Teachers:</strong> Our instructors have years of experience in teaching school and college-level arts subjects.</li>
-        <li><strong>Practical Computer Skills:</strong> Learn essential tools like MS Word, MS Paint, PowerPoint, WordPad, Excel, and more, crucial for academics and day-to-day use.</li>
+        <li><strong>Experienced Teachers:</strong> Our Teacher Chandan kundu have 18 years of experience in teaching carrier and arts subjects.</li>
+        <li><strong>Practical Computer Skills:</strong> Learn essential softwares like MS Word, MS Paint, WordPad, Excel, and more, crucial for academics and day-to-day use.</li>
         <li><strong>Affordable Fees:</strong> We offer quality education at a price that fits your budget.</li>
         <li><strong>Convenient Location:</strong> Located in Burdwan,Tikorhat , we are easily accessible for students in the community.</li>
         <li><strong>Friendly Environment:</strong> A welcoming and supportive environment to help you achieve your academic and skill-based goals.</li>
     </ul>
-    <p>At Arts Academy, we aim to make learning simple, practical, and effective. Join our batch today and take the next step towards academic success and practical skill development!</p>
+    <p>At ARTS ACADEMY, we aim to make learning simple, practical, and effective. Join our batch today and take the next step towards academic success and practical skill development!</p>
 </section>
 
 <!-- Main Section -->
 <main class="main-content">
     <div class="cta-grid">
-        <a href="static/admission_page.html" class="button primary">Admission</a>
-        <a href="static/pricing.html" class="button secondary">Pricing</a>
-        <a href="static/contact.html" class="button primary">Contact Us</a>
+        <a href="static/classes.html" class="button primary">Classes</a>
         <a href="static/subjects.html" class="button secondary">Subjects</a>
-        <a href="static/about.html" class="button primary">About Sir</a>
+        <a href="static/pricing.html" class="button primary">Fees</a>
+        <a href="static/about.html" class="button secondary">About Sir</a>
+        <a href="static/admission_page.html" class="button primary">Admission</a>
+        <a href="static/contact.html" class="button secondary">Contact Us</a>
     </div>
 </main>
 
