--- a/static/classes.html
+++ b/static/classes.html
@@ -47,6 +47,10 @@
                 <h3>B.A (Honours)</h3>
                 <p><strong>Note:</strong> Sanskrit only</p>
             </div>
+            <div class="subject-item">
+                <h3>Computer</h3>
+                <p><strong>Note:</strong> For any class</p>
+            </div>
         </div>
     </section>
 
