--- a/static/contact.html
+++ b/static/contact.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="contact_style.css">
+    <link rel="icon" href="favicon.ico" type="image/ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,800;1,400&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- Header -->
@@ -21,7 +26,7 @@
         <div class="contact-details">
             <p><strong>Teacher:</strong> Chandan Sir</p>
             <p><strong>Phone:</strong> <a href="tel:+919126879504">9126879504</a></p>
-            <p><strong>Email:</strong> <a href="mailto:chandan@example.com">chandan@example.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:artsacademy.in@gmail.com">artsacademy.in@gmail.com</a></p>
         </div>
 
         <!-- Contact Form -->
