--- a/static/subjects.html
+++ b/static/subjects.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subjects</title>
     <link rel="stylesheet" href="subjects_style.css">
+    <link rel="icon" href="favicon.ico" type="image/ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,800;1,400&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- Header -->
@@ -36,6 +41,7 @@
             </div>
             <div class="subject-item">
                 <h3>Computer</h3>
+                <p><strong>Note:</strong> For any class</p>
             </div>
         </div>
     </section>
