--- a/static/admission_page.html
+++ b/static/admission_page.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admission Form</title>
     <link rel="stylesheet" href="admission_style.css">
+    <link rel="stylesheet" href="msg.css">
     <link rel="icon" href="favicon.ico" type="image/ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,6 +75,8 @@
                     <span id="class-error" class="error-message"></span>
                 </div>
 
+                <div id="notification" class="notification hidden"></div>
+
                 <!-- Subjects -->
                 <div class="form-group">
                     <label>Subjects:</label>
@@ -118,6 +121,7 @@
 
     <!-- JavaScript -->
     <script src="admission_script.js"></script>
+    <script src="msg.js"></script>
 </body>
 
 </html>
