--- a/static/pricing.html
+++ b/static/pricing.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Fees</title>
     <link rel="stylesheet" href="pricing_style.css">
+    <link rel="stylesheet" href="msg.css">
     <link rel="icon" href="favicon.ico" type="image/ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -88,6 +89,9 @@
     </div>
 </div>
 
+<div id="notification" class="notification hidden"></div>
+
+
 <!-- Calculate Button -->
 <div class="calculate-container">
     <button class="calculate-btn" onclick="calculateFee()">Calculate</button>
@@ -104,6 +108,7 @@
 </footer>
 
 <script src="pricing_script.js"></script>
+<script src="msg.js"></script>
 
 </body>
 </html>
