final ui update

--- a/static/about.html
+++ b/static/about.html
@@ -42,6 +42,7 @@
         <p><strong>Recognising Name:</strong> Chandan Sir</p>
         <p><strong>Location:</strong> Tikorhat, BenePukur Par, Burdwan</p>
         <p><strong>Mobile:</strong> <a href="tel:+919126879504">9126879504</a></p>
+        <p><strong>Email:</strong> <a href="mailto:artsacademy.in@gmail.com">artsacademy.in@gmail.com</a></p>
     </section>
 
 
