--- a/static/admission_page.html
+++ b/static/admission_page.html
@@ -71,6 +71,7 @@
                         <option value="12">Class 12</option>
                         <option value="ba_pass">B.A (Pass)</option>
                         <option value="ba_honours">B.A (Honours)</option>
+                        <option value="computer_any">Only Computer (For anyone)</option>
                     </select>
                     <span id="class-error" class="error-message"></span>
                 </div>
@@ -91,7 +92,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="button" id="calculate-fee" onclick="calculateFee()">Calculate Fee</button>
+                    <button type="button" id="calculate-fee" onclick="calculateFee()">Calculate Fees</button>
                 </div>
 
                 <!-- Fee Display -->
