--- a/static/pricing.html
+++ b/static/pricing.html
@@ -37,6 +37,7 @@
                 <option value="12">Class 12</option>
                 <option value="ba_pass">B.A (Pass)</option>
                 <option value="ba_honours">B.A (Honours)</option>
+                <option value="computer_any">Only Computer (For anyone)</option>
             </select>
             <span id="class-error" class="error-message"></span>
         </div>
@@ -102,10 +103,12 @@
     <p><strong>Total Fee: </strong><span id="fee-amount">₹0</span></p>
 </div>
 
+</section>
 
 <footer class="footer">
     <p>&copy; 2024 Arts Academy | All Rights Reserved</p>
 </footer>
+
 
 <script src="pricing_script.js"></script>
 <script src="msg.js"></script>
