--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Header Section -->
     <header class="header">
-        <img src="favicon.ico" alt="ARTS ACADEMY Logo" class="logo">
+        <img src="arts_logo.jpeg" alt="ARTS ACADEMY Logo" class="logo">
         <h1>Welcome To </h1>
         <div id="typed-output">
             <h1><span id="typed-text"></span></h1>
