--- a/static/contact.html
+++ b/static/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="contact_style.css">
+    <link rel="stylesheet" href="msg.css">
     <link rel="icon" href="favicon.ico" type="image/ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,19 +29,27 @@
             <p><strong>Phone:</strong> <a href="tel:+919126879504">9126879504</a></p>
             <p><strong>Email:</strong> <a href="mailto:artsacademy.in@gmail.com">artsacademy.in@gmail.com</a></p>
         </div>
-
+        
+        <div class="notification"></div>
+        <div class="notification hidden"></div>
         <!-- Contact Form -->
-        <form action="#" method="post" class="contact-form">
+        <form id="contact-form" class="contact-form">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
-        </form>
+        </form>        
     </section>
 
     <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2024 Arts Academy | All Rights Reserved</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        emailjs.init('service_a9ukqbw'); // Replace 'YOUR_USER_ID' with your EmailJS User ID
+    </script>
+    <script src="email.js"></script>
 </body>
 </html>
