--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARTS ACADEMY</title>
     <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/fonts.css">
     <link rel="icon" href="favicon.ico" type="image/ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +37,7 @@
         <p>ARTS ACADEMY is a local initiative dedicated to helping students excel in their studies and build essential computer skills. We specialize in teaching students from Class 6 to 12 and college arts students. Here’s why you should join us:</p>
         <ul>
             <li><strong>Focused Learning:</strong> Small batch sizes ensure personalized attention and better understanding for every student.</li>
-            <li><strong>Experienced Teachers:</strong> Our Teacher Chandan Kundu has 18 years of experience in teaching career and arts subjects.</li>
+            <li><strong>Experienced Teacher:</strong> Our Teacher Chandan Kundu has 18 years of experience in teaching career and arts subjects.</li>
             <li><strong>Practical Computer Skills:</strong> Learn essential software like MS Word, MS Paint, WordPad, Excel, and more, crucial for academics and day-to-day use.</li>
             <li><strong>Affordable Fees:</strong> We offer quality education at a price that fits your budget.</li>
             <li><strong>Convenient Location:</strong> Located in Burdwan, Tikorhat, we are easily accessible for students in the community.</li>
@@ -50,7 +51,7 @@
         <div class="cta-grid">
             <a href="static/classes.html" class="button primary">Classes</a>
             <a href="static/subjects.html" class="button secondary">Subjects</a>
-            <a href="static/pricing.html" class="button primary">Fees</a>
+            <a href="static/pricing.html" class="button primary">Calculate Fees</a>
             <a href="static/about.html" class="button secondary">About Sir</a>
             <a href="static/admission_page.html" class="button primary">Admission</a>
             <a href="static/contact.html" class="button secondary">Contact Us</a>
