--- a/static/contact.html
+++ b/static/contact.html
@@ -6,6 +6,7 @@
     <title>Contact Us</title>
     <link rel="stylesheet" href="contact_style.css">
     <link rel="stylesheet" href="msg.css">
+    <link rel="stylesheet" href="fonts.css">
     <link rel="icon" href="favicon.ico" type="image/ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
